🌐 i18n: перевод страницы диалогов

--- a/src/app/locales/en/pages.json
+++ b/src/app/locales/en/pages.json
@@ -50,6 +50,11 @@
           "submit-text": "Create post"
         }
       }
+    },
+    "dialogs-page": {
+      "dialogs": "Dialogs",
+      "select-dialog": "Select dialog",
+      "no-dialogs": "You do not have any dialogs"
     }
   }
 }
