💩 badcode: [profile] отображение кнопки перехода к диалогу если есть диалог с пользователем

--- a/src/app/locales/ru/pages.json
+++ b/src/app/locales/ru/pages.json
@@ -31,6 +31,7 @@
     },
     "user-page": {
       "start-dialog": "Начать диалог",
+      "go-to-dialog": "Перейти к диалогу",
       "create-dialog-modal": {
         "message": "Сообщение",
         "send-message": "Отправить сообщение"
