--- a/src/app/locales/en/pages.json
+++ b/src/app/locales/en/pages.json
@@ -31,6 +31,7 @@
     },
     "user-page": {
       "start-dialog": "Start dialog",
+      "go-to-dialog": "Go to dialog",
       "create-dialog-modal": {
         "message": "Message",
         "send-message": "Send message"
